--- a/server/language/en_US.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/en_US.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -370,7 +370,7 @@ msgstr ""
 msgid "First"
 msgstr ""
 
-msgid "Initial"
+msgid "Initials"
 msgstr ""
 
 msgid "Display"
@@ -1297,6 +1297,9 @@ msgstr ""
 msgid "Paste selected item"
 msgstr ""
 
+msgid "An overview of"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "Start"
 msgstr ""
@@ -1305,24 +1308,33 @@ msgstr ""
 msgid "End"
 msgstr ""
 
-msgid "Printed by: "
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
+msgid "Printed by"
 msgstr ""
 
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "Printed on: "
+msgid "at"
+msgstr ""
+
+msgid "of"
 msgstr ""
 
 msgid "Location: "
 msgstr ""
 
-# 83%
-# 75%
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l jS F Y"
-msgstr "l F j, Y"
+msgid "j M {0}"
+msgstr ""
+
+msgid "l jS M Y {0}"
+msgstr ""
+
+msgid "All day: "
+msgstr ""
 
 # 83%
 # 75%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "l jS F"
 msgstr "l, F j"
@@ -1353,10 +1365,6 @@ msgstr ""
 
 msgid "j"
 msgstr ""
-
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l d/m/Y"
-msgstr "l, m/d/Y"
 
 msgid "General calendar settings"
 msgstr ""
@@ -1551,6 +1559,12 @@ msgstr ""
 msgid "Loading appointments"
 msgstr ""
 
+msgid "Attendees"
+msgstr ""
+
+msgid "Optional attendees"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "jS F {0}"
 msgstr ""
@@ -1661,6 +1675,8 @@ msgstr ""
 msgid "Today (all day)"
 msgstr ""
 
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
 msgid "{0} - {1}"
 msgstr ""
 
@@ -1971,8 +1987,8 @@ msgid "Delete Category"
 msgstr ""
 
 msgid ""
-"Are you sure you want to delete the category \"{0}\"? Items already assigned "
-"this category won't be affected."
+"Are you sure you want to delete the category \"{0}\"? Other items keep this "
+"category, but lose the assigned color."
 msgstr ""
 
 msgid "Rename Category"
@@ -2235,6 +2251,12 @@ msgstr ""
 msgid "No suggestions available"
 msgstr ""
 
+# 83%
+# 75%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "l jS F Y"
+msgstr "l F j, Y"
+
 msgid "Switch between different contexts e.g. inbox, calendar, etc."
 msgstr ""
 
@@ -2326,6 +2348,9 @@ msgstr ""
 msgid "WebApp Manual"
 msgstr ""
 
+msgid "Item data"
+msgstr ""
+
 msgid "INSERT"
 msgstr ""
 
@@ -2333,9 +2358,6 @@ msgid "Sort by: context.mail.griddefaultcolumn"
 msgstr ""
 
 msgid "ZDeveloper"
-msgstr ""
-
-msgid "Kopano WebApp print"
 msgstr ""
 
 msgid "Display name"
@@ -2893,6 +2915,9 @@ msgstr "m-d-Y"
 msgid "Original message"
 msgstr ""
 
+msgid "l d/m/Y"
+msgstr "l, m/d/Y"
+
 msgid "Sent Items"
 msgstr ""
 
@@ -3110,9 +3135,6 @@ msgstr ""
 #. TRANSLATORS: check if the mail is send by some delegator or not. if then display "on behalf of".
 msgctxt "mail.previewpanel"
 msgid "on behalf of"
-msgstr ""
-
-msgid "D {0}"
 msgstr ""
 
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
@@ -3422,10 +3444,20 @@ msgstr ""
 msgid "Loading contacts"
 msgstr ""
 
-msgid "Group"
+msgid ""
+"There are no items to show in this list. Update the filter for more results."
 msgstr ""
 
-msgid "Work"
+msgid "[Group]"
+msgstr ""
+
+msgid "Work:"
+msgstr ""
+
+msgid "Primary:"
+msgstr ""
+
+msgid "Mobile:"
 msgstr ""
 
 msgid "Sort by: Full Name"
@@ -3613,6 +3645,9 @@ msgid "Y"
 msgstr ""
 
 msgid "Important"
+msgstr ""
+
+msgid "Work"
 msgstr ""
 
 msgid "Personal"
@@ -3856,6 +3891,9 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
+msgid "D {0}"
+msgstr ""
+
 msgid "D d-m"
 msgstr "D m-d"
 
@@ -3894,14 +3932,6 @@ msgstr ""
 msgid ""
 "The installed license key(s) have expired or are being over used. Please "
 "contact your system administrator for further information."
-msgstr ""
-
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-msgid "{0} in {1}"
-msgstr ""
-
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
-msgid "{0} of {1}"
 msgstr ""
 
 msgid "Full control"
@@ -4286,9 +4316,6 @@ msgstr ""
 msgid "Show From field"
 msgstr ""
 
-msgid "No signatures configured"
-msgstr ""
-
 msgid "Cannot save while attachment is being uploaded"
 msgstr ""
 
@@ -4500,6 +4527,9 @@ msgstr ""
 msgid "Signatures"
 msgstr ""
 
+msgid "No signatures configured"
+msgstr ""
+
 msgid "New messages"
 msgstr ""
 
@@ -4685,6 +4715,9 @@ msgstr ""
 msgid "Show insertion points in WebApp"
 msgstr ""
 
+msgid "Show \"item data\" button in context menu (mail only)"
+msgstr ""
+
 msgid "Edit setting"
 msgstr ""
 
@@ -4739,10 +4772,25 @@ msgstr ""
 msgid "Hide widget panel"
 msgstr ""
 
-msgid "File previewing"
+msgid "Auto"
 msgstr ""
 
-msgid "Attachment preview (PDF, Open formats and images)"
+msgid "Actual size"
+msgstr ""
+
+msgid "Page width"
+msgstr ""
+
+msgid "Attachment preview (PDF and Open formats)"
+msgstr ""
+
+msgid "Document default zoom"
+msgstr ""
+
+msgid "PDF zoom"
+msgstr ""
+
+msgid "File previewing"
 msgstr ""
 
 msgid "Inbox navigation"
@@ -4942,6 +4990,9 @@ msgstr ""
 msgid "Date Complete"
 msgstr ""
 
+msgid "Multiple companies name must be separated by"
+msgstr ""
+
 msgid "Update List"
 msgstr ""
 
@@ -5012,6 +5063,13 @@ msgid "New task"
 msgstr ""
 
 msgid "Completed"
+msgstr ""
+
+msgid "Printed by: "
+msgstr ""
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "Printed on: "
 msgstr ""
 
 msgid "Percent complete"
@@ -5176,6 +5234,9 @@ msgid "Previous"
 msgstr ""
 
 msgid "Next"
+msgstr ""
+
+msgid "Click the link to open the URL in a new window."
 msgstr ""
 
 msgid "The server reported an unknown error on your request."
@@ -5474,9 +5535,6 @@ msgid ""
 msgstr ""
 
 msgid "Unknown MAPI Error"
-msgstr ""
-
-msgid "Click the link to open the URL in a new window."
 msgstr ""
 
 msgid "This external link will open in a new window"
@@ -6045,6 +6103,9 @@ msgid "Password"
 msgstr ""
 
 msgid "Sign in"
+msgstr ""
+
+msgid "Caps lock is on"
 msgstr ""
 
 msgid "File is not imported successfully"
