--- a/server/language/et_EE.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/et_EE.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -381,7 +381,7 @@ msgstr "Kasutaja andmed"
 msgid "First"
 msgstr ""
 
-msgid "Initial"
+msgid "Initials"
 msgstr ""
 
 msgid "Display"
@@ -1369,6 +1369,9 @@ msgstr ""
 msgid "Paste selected item"
 msgstr ""
 
+msgid "An overview of"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "Start"
 msgstr ""
@@ -1377,27 +1380,33 @@ msgstr ""
 msgid "End"
 msgstr ""
 
-# 76%
-#, fuzzy
-msgid "Printed by: "
-msgstr "Sorteeri: ikoon"
-
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-#, fuzzy
-msgid "Printed on: "
-msgstr "Trüki see märkus"
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
+msgid "Printed by"
+msgstr ""
+
+msgid "at"
+msgstr ""
+
+msgid "of"
+msgstr ""
 
 #, fuzzy
 msgid "Location: "
 msgstr "Asukoht"
 
-# 75%
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-#, fuzzy
-msgid "l jS F Y"
-msgstr "jS F Y"
+msgid "j M {0}"
+msgstr ""
+
+msgid "l jS M Y {0}"
+msgstr ""
+
+msgid "All day: "
+msgstr ""
 
 # 75%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 #, fuzzy
 msgid "l jS F"
@@ -1432,10 +1441,6 @@ msgstr ""
 #, fuzzy
 msgid "j"
 msgstr "jS"
-
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l d/m/Y"
-msgstr ""
 
 msgid "General calendar settings"
 msgstr ""
@@ -1645,6 +1650,12 @@ msgstr ""
 msgid "Loading appointments"
 msgstr ""
 
+msgid "Attendees"
+msgstr ""
+
+msgid "Optional attendees"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "jS F {0}"
 msgstr ""
@@ -1758,6 +1769,8 @@ msgstr ""
 msgid "Today (all day)"
 msgstr ""
 
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
 msgid "{0} - {1}"
 msgstr ""
 
@@ -2080,8 +2093,8 @@ msgid "Delete Category"
 msgstr ""
 
 msgid ""
-"Are you sure you want to delete the category \"{0}\"? Items already assigned "
-"this category won't be affected."
+"Are you sure you want to delete the category \"{0}\"? Other items keep this "
+"category, but lose the assigned color."
 msgstr ""
 
 msgid "Rename Category"
@@ -2356,6 +2369,12 @@ msgstr ""
 msgid "No suggestions available"
 msgstr ""
 
+# 75%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#, fuzzy
+msgid "l jS F Y"
+msgstr "jS F Y"
+
 msgid "Switch between different contexts e.g. inbox, calendar, etc."
 msgstr ""
 
@@ -2463,6 +2482,9 @@ msgstr ""
 msgid "WebApp Manual"
 msgstr ""
 
+msgid "Item data"
+msgstr ""
+
 msgid "INSERT"
 msgstr ""
 
@@ -2471,10 +2493,6 @@ msgstr ""
 
 msgid "ZDeveloper"
 msgstr ""
-
-#, fuzzy
-msgid "Kopano WebApp print"
-msgstr "Kopano veebirakendus"
 
 # 91%
 # 100%
@@ -3084,6 +3102,9 @@ msgstr ""
 msgid "Original message"
 msgstr ""
 
+msgid "l d/m/Y"
+msgstr ""
+
 msgid "Sent Items"
 msgstr ""
 
@@ -3303,9 +3324,6 @@ msgstr ""
 #. TRANSLATORS: check if the mail is send by some delegator or not. if then display "on behalf of".
 msgctxt "mail.previewpanel"
 msgid "on behalf of"
-msgstr ""
-
-msgid "D {0}"
 msgstr ""
 
 # 100%
@@ -3653,11 +3671,21 @@ msgstr "Assistent"
 msgid "Loading contacts"
 msgstr "Kontaktide laadimine"
 
-msgid "Group"
-msgstr "Grupp"
+msgid ""
+"There are no items to show in this list. Update the filter for more results."
+msgstr ""
 
-msgid "Work"
-msgstr "Töö"
+msgid "[Group]"
+msgstr ""
+
+msgid "Work:"
+msgstr ""
+
+msgid "Primary:"
+msgstr ""
+
+msgid "Mobile:"
+msgstr ""
 
 msgid "Sort by: Full Name"
 msgstr "Sorteeri: Täisnime järgi"
@@ -3902,6 +3930,9 @@ msgstr "Y"
 
 msgid "Important"
 msgstr "Oluline"
+
+msgid "Work"
+msgstr "Töö"
 
 msgid "Personal"
 msgstr "Isiklik"
@@ -4169,6 +4200,9 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
+msgid "D {0}"
+msgstr ""
+
 msgid "D d-m"
 msgstr ""
 
@@ -4207,14 +4241,6 @@ msgstr ""
 msgid ""
 "The installed license key(s) have expired or are being over used. Please "
 "contact your system administrator for further information."
-msgstr ""
-
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-msgid "{0} in {1}"
-msgstr ""
-
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
-msgid "{0} of {1}"
 msgstr ""
 
 msgid "Full control"
@@ -4621,9 +4647,6 @@ msgstr ""
 msgid "Show From field"
 msgstr ""
 
-msgid "No signatures configured"
-msgstr ""
-
 msgid "Cannot save while attachment is being uploaded"
 msgstr ""
 
@@ -4850,6 +4873,9 @@ msgstr ""
 msgid "Signatures"
 msgstr ""
 
+msgid "No signatures configured"
+msgstr ""
+
 msgid "New messages"
 msgstr ""
 
@@ -5055,6 +5081,9 @@ msgstr ""
 msgid "Show insertion points in WebApp"
 msgstr ""
 
+msgid "Show \"item data\" button in context menu (mail only)"
+msgstr ""
+
 msgid "Edit setting"
 msgstr ""
 
@@ -5111,10 +5140,25 @@ msgstr ""
 msgid "Hide widget panel"
 msgstr ""
 
-msgid "File previewing"
+msgid "Auto"
 msgstr ""
 
-msgid "Attachment preview (PDF, Open formats and images)"
+msgid "Actual size"
+msgstr ""
+
+msgid "Page width"
+msgstr ""
+
+msgid "Attachment preview (PDF and Open formats)"
+msgstr ""
+
+msgid "Document default zoom"
+msgstr ""
+
+msgid "PDF zoom"
+msgstr ""
+
+msgid "File previewing"
 msgstr ""
 
 msgid "Inbox navigation"
@@ -5321,6 +5365,9 @@ msgstr ""
 msgid "Date Complete"
 msgstr ""
 
+msgid "Multiple companies name must be separated by"
+msgstr ""
+
 msgid "Update List"
 msgstr ""
 
@@ -5401,6 +5448,16 @@ msgstr ""
 #, fuzzy
 msgid "Completed"
 msgstr "Valmis"
+
+# 76%
+#, fuzzy
+msgid "Printed by: "
+msgstr "Sorteeri: ikoon"
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#, fuzzy
+msgid "Printed on: "
+msgstr "Trüki see märkus"
 
 msgid "Percent complete"
 msgstr ""
@@ -5586,6 +5643,9 @@ msgid "Previous"
 msgstr ""
 
 msgid "Next"
+msgstr ""
+
+msgid "Click the link to open the URL in a new window."
 msgstr ""
 
 msgid "The server reported an unknown error on your request."
@@ -5903,9 +5963,6 @@ msgstr ""
 #, fuzzy
 msgid "Unknown MAPI Error"
 msgstr "Tundmatu MAPI viga: %s"
-
-msgid "Click the link to open the URL in a new window."
-msgstr ""
 
 msgid "This external link will open in a new window"
 msgstr ""
@@ -6486,6 +6543,9 @@ msgid "Password"
 msgstr ""
 
 msgid "Sign in"
+msgstr ""
+
+msgid "Caps lock is on"
 msgstr ""
 
 #, fuzzy
