--- a/server/language/pt_BR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/pt_BR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -375,8 +375,8 @@ msgstr "Detalhes do usuário"
 msgid "First"
 msgstr "Primeiro"
 
-msgid "Initial"
-msgstr "Iniciais"
+msgid "Initials"
+msgstr ""
 
 msgid "Display"
 msgstr "Exibir"
@@ -1392,6 +1392,9 @@ msgstr ""
 msgid "Paste selected item"
 msgstr ""
 
+msgid "An overview of"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "Start"
 msgstr "Início"
@@ -1400,26 +1403,34 @@ msgstr "Início"
 msgid "End"
 msgstr "Fim"
 
-#, fuzzy
-msgid "Printed by: "
-msgstr "Ordenar por: Para"
-
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-#, fuzzy
-msgid "Printed on: "
-msgstr "Imprimir esta nota"
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
+msgid "Printed by"
+msgstr ""
+
+msgid "at"
+msgstr ""
+
+msgid "of"
+msgstr ""
 
 #, fuzzy
 msgid "Location: "
 msgstr "Local"
 
-# 87%
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l jS F Y"
-msgstr "l, j &#100;e F &#100;e Y"
+msgid "j M {0}"
+msgstr ""
+
+msgid "l jS M Y {0}"
+msgstr ""
+
+msgid "All day: "
+msgstr ""
 
 # 87%
 # 75%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "l jS F"
 msgstr "l, j \\de F"
@@ -1451,10 +1462,6 @@ msgstr ""
 #, fuzzy
 msgid "j"
 msgstr "j"
-
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l d/m/Y"
-msgstr "l d/m/Y"
 
 msgid "General calendar settings"
 msgstr "Configurações gerais do Calendário"
@@ -1663,6 +1670,12 @@ msgstr "Ordenar por: Sensibilidade"
 msgid "Loading appointments"
 msgstr "Carregando compromissos"
 
+msgid "Attendees"
+msgstr ""
+
+msgid "Optional attendees"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "jS F {0}"
 msgstr ""
@@ -1785,6 +1798,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} em {1}"
@@ -2139,8 +2154,8 @@ msgid "Delete Category"
 msgstr ""
 
 msgid ""
-"Are you sure you want to delete the category \"{0}\"? Items already assigned "
-"this category won't be affected."
+"Are you sure you want to delete the category \"{0}\"? Other items keep this "
+"category, but lose the assigned color."
 msgstr ""
 
 msgid "Rename Category"
@@ -2418,6 +2433,11 @@ msgstr "Informações de livre/ocupado indisponíveis para essa data"
 msgid "No suggestions available"
 msgstr "Nenhuma sugestão disponível"
 
+# 87%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "l jS F Y"
+msgstr "l, j &#100;e F &#100;e Y"
+
 msgid "Switch between different contexts e.g. inbox, calendar, etc."
 msgstr ""
 
@@ -2523,6 +2543,9 @@ msgstr "Ajuda"
 msgid "WebApp Manual"
 msgstr "Manual WebApp"
 
+msgid "Item data"
+msgstr ""
+
 msgid "INSERT"
 msgstr "INSERIR"
 
@@ -2531,10 +2554,6 @@ msgstr ""
 
 msgid "ZDeveloper"
 msgstr "ZDeveloper"
-
-#, fuzzy
-msgid "Kopano WebApp print"
-msgstr "Kopano WebApp"
 
 msgid "Display name"
 msgstr "Nome para exibição"
@@ -3149,6 +3168,9 @@ msgstr "d/m/Y"
 msgid "Original message"
 msgstr "Mensagem original"
 
+msgid "l d/m/Y"
+msgstr "l d/m/Y"
+
 msgid "Sent Items"
 msgstr ""
 
@@ -3390,9 +3412,6 @@ msgstr "Destinatários"
 msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr "em nome de"
-
-msgid "D {0}"
-msgstr ""
 
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
 msgctxt "mail.previewpanel"
@@ -3721,11 +3740,21 @@ msgstr "Assistente"
 msgid "Loading contacts"
 msgstr "Carregando contatos"
 
-msgid "Group"
-msgstr "Grupos"
+msgid ""
+"There are no items to show in this list. Update the filter for more results."
+msgstr ""
 
-msgid "Work"
-msgstr "Trabalho"
+msgid "[Group]"
+msgstr ""
+
+msgid "Work:"
+msgstr ""
+
+msgid "Primary:"
+msgstr ""
+
+msgid "Mobile:"
+msgstr ""
 
 msgid "Sort by: Full Name"
 msgstr "Ordenar por: Nome Completo"
@@ -3918,6 +3947,9 @@ msgstr "Y"
 
 msgid "Important"
 msgstr "Importante"
+
+msgid "Work"
+msgstr "Trabalho"
 
 msgid "Personal"
 msgstr "Pessoal"
@@ -4186,6 +4218,9 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
+msgid "D {0}"
+msgstr ""
+
 #, fuzzy
 msgid "D d-m"
 msgstr "d/m/Y"
@@ -4233,16 +4268,6 @@ msgid ""
 "The installed license key(s) have expired or are being over used. Please "
 "contact your system administrator for further information."
 msgstr ""
-
-# 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-msgid "{0} in {1}"
-msgstr "{0} em {1}"
-
-# 100%
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
-msgid "{0} of {1}"
-msgstr "{0} de {1}"
 
 msgid "Full control"
 msgstr "Controle total"
@@ -4660,9 +4685,6 @@ msgstr "Mostrar Cco"
 msgid "Show From field"
 msgstr "Mostrar De"
 
-msgid "No signatures configured"
-msgstr "Nenhuma assinatura configurada"
-
 msgid "Cannot save while attachment is being uploaded"
 msgstr ""
 
@@ -4895,6 +4917,9 @@ msgstr ""
 msgid "Signatures"
 msgstr "Assinaturas"
 
+msgid "No signatures configured"
+msgstr "Nenhuma assinatura configurada"
+
 msgid "New messages"
 msgstr ""
 
@@ -5098,6 +5123,9 @@ msgstr ""
 msgid "Show insertion points in WebApp"
 msgstr ""
 
+msgid "Show \"item data\" button in context menu (mail only)"
+msgstr ""
+
 msgid "Edit setting"
 msgstr "Editar configuração"
 
@@ -5156,10 +5184,25 @@ msgstr ""
 msgid "Hide widget panel"
 msgstr ""
 
-msgid "File previewing"
+msgid "Auto"
 msgstr ""
 
-msgid "Attachment preview (PDF, Open formats and images)"
+msgid "Actual size"
+msgstr ""
+
+msgid "Page width"
+msgstr ""
+
+msgid "Attachment preview (PDF and Open formats)"
+msgstr ""
+
+msgid "Document default zoom"
+msgstr ""
+
+msgid "PDF zoom"
+msgstr ""
+
+msgid "File previewing"
 msgstr ""
 
 msgid "Inbox navigation"
@@ -5375,6 +5418,9 @@ msgstr "Enviar a resposta agora."
 msgid "Date Complete"
 msgstr "Data de Conclusão"
 
+msgid "Multiple companies name must be separated by"
+msgstr ""
+
 msgid "Update List"
 msgstr "Atualizar Lista"
 
@@ -5462,6 +5508,15 @@ msgstr ""
 #, fuzzy
 msgid "Completed"
 msgstr "Concluído"
+
+#, fuzzy
+msgid "Printed by: "
+msgstr "Ordenar por: Para"
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#, fuzzy
+msgid "Printed on: "
+msgstr "Imprimir esta nota"
 
 msgid "Percent complete"
 msgstr "Porcentagem concluída"
@@ -5636,6 +5691,9 @@ msgid "Previous"
 msgstr ""
 
 msgid "Next"
+msgstr ""
+
+msgid "Click the link to open the URL in a new window."
 msgstr ""
 
 msgid "The server reported an unknown error on your request."
@@ -5956,9 +6014,6 @@ msgstr ""
 #, fuzzy
 msgid "Unknown MAPI Error"
 msgstr "Erro MAPI desconhecido: %s"
-
-msgid "Click the link to open the URL in a new window."
-msgstr ""
 
 msgid "This external link will open in a new window"
 msgstr "Este link externo será aberto em uma nova janela"
@@ -6627,6 +6682,9 @@ msgid "Password"
 msgstr ""
 
 msgid "Sign in"
+msgstr ""
+
+msgid "Caps lock is on"
 msgstr ""
 
 # 94%
