--- a/server/language/fa_IR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/fa_IR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -361,7 +361,7 @@ msgstr ""
 msgid "First"
 msgstr ""
 
-msgid "Initial"
+msgid "Initials"
 msgstr ""
 
 msgid "Display"
@@ -1291,6 +1291,9 @@ msgstr ""
 msgid "Paste selected item"
 msgstr ""
 
+msgid "An overview of"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "Start"
 msgstr ""
@@ -1299,20 +1302,31 @@ msgstr ""
 msgid "End"
 msgstr ""
 
-msgid "Printed by: "
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
+msgid "Printed by"
 msgstr ""
 
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "Printed on: "
+msgid "at"
+msgstr ""
+
+msgid "of"
 msgstr ""
 
 msgid "Location: "
 msgstr ""
 
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l jS F Y"
+msgid "j M {0}"
 msgstr ""
 
+msgid "l jS M Y {0}"
+msgstr ""
+
+msgid "All day: "
+msgstr ""
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "l jS F"
 msgstr ""
@@ -1342,10 +1356,6 @@ msgid "M j"
 msgstr ""
 
 msgid "j"
-msgstr ""
-
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l d/m/Y"
 msgstr ""
 
 msgid "General calendar settings"
@@ -1540,6 +1550,12 @@ msgstr ""
 msgid "Loading appointments"
 msgstr ""
 
+msgid "Attendees"
+msgstr ""
+
+msgid "Optional attendees"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "jS F {0}"
 msgstr ""
@@ -1649,6 +1665,8 @@ msgstr ""
 msgid "Today (all day)"
 msgstr ""
 
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
 msgid "{0} - {1}"
 msgstr ""
 
@@ -1960,8 +1978,8 @@ msgid "Delete Category"
 msgstr ""
 
 msgid ""
-"Are you sure you want to delete the category \"{0}\"? Items already assigned "
-"this category won't be affected."
+"Are you sure you want to delete the category \"{0}\"? Other items keep this "
+"category, but lose the assigned color."
 msgstr ""
 
 msgid "Rename Category"
@@ -2223,6 +2241,10 @@ msgstr ""
 msgid "No suggestions available"
 msgstr ""
 
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "l jS F Y"
+msgstr ""
+
 msgid "Switch between different contexts e.g. inbox, calendar, etc."
 msgstr ""
 
@@ -2314,6 +2336,9 @@ msgstr ""
 msgid "WebApp Manual"
 msgstr ""
 
+msgid "Item data"
+msgstr ""
+
 msgid "INSERT"
 msgstr ""
 
@@ -2321,9 +2346,6 @@ msgid "Sort by: context.mail.griddefaultcolumn"
 msgstr ""
 
 msgid "ZDeveloper"
-msgstr ""
-
-msgid "Kopano WebApp print"
 msgstr ""
 
 msgid "Display name"
@@ -2878,6 +2900,9 @@ msgstr ""
 msgid "Original message"
 msgstr ""
 
+msgid "l d/m/Y"
+msgstr ""
+
 msgid "Sent Items"
 msgstr ""
 
@@ -3095,9 +3120,6 @@ msgstr ""
 #. TRANSLATORS: check if the mail is send by some delegator or not. if then display "on behalf of".
 msgctxt "mail.previewpanel"
 msgid "on behalf of"
-msgstr ""
-
-msgid "D {0}"
 msgstr ""
 
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
@@ -3407,10 +3429,20 @@ msgstr ""
 msgid "Loading contacts"
 msgstr ""
 
-msgid "Group"
+msgid ""
+"There are no items to show in this list. Update the filter for more results."
 msgstr ""
 
-msgid "Work"
+msgid "[Group]"
+msgstr ""
+
+msgid "Work:"
+msgstr ""
+
+msgid "Primary:"
+msgstr ""
+
+msgid "Mobile:"
 msgstr ""
 
 msgid "Sort by: Full Name"
@@ -3598,6 +3630,9 @@ msgid "Y"
 msgstr ""
 
 msgid "Important"
+msgstr ""
+
+msgid "Work"
 msgstr ""
 
 msgid "Personal"
@@ -3843,6 +3878,9 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
+msgid "D {0}"
+msgstr ""
+
 msgid "D d-m"
 msgstr ""
 
@@ -3879,14 +3917,6 @@ msgstr ""
 msgid ""
 "The installed license key(s) have expired or are being over used. Please "
 "contact your system administrator for further information."
-msgstr ""
-
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-msgid "{0} in {1}"
-msgstr ""
-
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
-msgid "{0} of {1}"
 msgstr ""
 
 msgid "Full control"
@@ -4271,9 +4301,6 @@ msgstr ""
 msgid "Show From field"
 msgstr ""
 
-msgid "No signatures configured"
-msgstr ""
-
 msgid "Cannot save while attachment is being uploaded"
 msgstr ""
 
@@ -4485,6 +4512,9 @@ msgstr ""
 msgid "Signatures"
 msgstr ""
 
+msgid "No signatures configured"
+msgstr ""
+
 msgid "New messages"
 msgstr ""
 
@@ -4671,6 +4701,9 @@ msgstr ""
 msgid "Show insertion points in WebApp"
 msgstr ""
 
+msgid "Show \"item data\" button in context menu (mail only)"
+msgstr ""
+
 msgid "Edit setting"
 msgstr ""
 
@@ -4725,10 +4758,25 @@ msgstr ""
 msgid "Hide widget panel"
 msgstr ""
 
-msgid "File previewing"
+msgid "Auto"
 msgstr ""
 
-msgid "Attachment preview (PDF, Open formats and images)"
+msgid "Actual size"
+msgstr ""
+
+msgid "Page width"
+msgstr ""
+
+msgid "Attachment preview (PDF and Open formats)"
+msgstr ""
+
+msgid "Document default zoom"
+msgstr ""
+
+msgid "PDF zoom"
+msgstr ""
+
+msgid "File previewing"
 msgstr ""
 
 msgid "Inbox navigation"
@@ -4928,6 +4976,9 @@ msgstr ""
 msgid "Date Complete"
 msgstr ""
 
+msgid "Multiple companies name must be separated by"
+msgstr ""
+
 msgid "Update List"
 msgstr ""
 
@@ -4998,6 +5049,13 @@ msgid "New task"
 msgstr ""
 
 msgid "Completed"
+msgstr ""
+
+msgid "Printed by: "
+msgstr ""
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "Printed on: "
 msgstr ""
 
 msgid "Percent complete"
@@ -5162,6 +5220,9 @@ msgid "Previous"
 msgstr ""
 
 msgid "Next"
+msgstr ""
+
+msgid "Click the link to open the URL in a new window."
 msgstr ""
 
 msgid "The server reported an unknown error on your request."
@@ -5459,9 +5520,6 @@ msgid ""
 msgstr ""
 
 msgid "Unknown MAPI Error"
-msgstr ""
-
-msgid "Click the link to open the URL in a new window."
 msgstr ""
 
 msgid "This external link will open in a new window"
@@ -6025,6 +6083,9 @@ msgid "Password"
 msgstr ""
 
 msgid "Sign in"
+msgstr ""
+
+msgid "Caps lock is on"
 msgstr ""
 
 msgid "File is not imported successfully"
