--- a/server/language/fr_FR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/fr_FR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -375,8 +375,8 @@ msgstr "Données détaillés de l'utilisateur"
 msgid "First"
 msgstr "Premier"
 
-msgid "Initial"
-msgstr "Initiale"
+msgid "Initials"
+msgstr ""
 
 msgid "Display"
 msgstr "1. Affichage (n) 2. Afficher (v)"
@@ -1365,6 +1365,9 @@ msgstr "Copier l'élément sélectionné"
 msgid "Paste selected item"
 msgstr "Coller l'élément sélectionné"
 
+msgid "An overview of"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "Start"
 msgstr "Démarrer"
@@ -1373,25 +1376,33 @@ msgstr "Démarrer"
 msgid "End"
 msgstr "End"
 
-#, fuzzy
-msgid "Printed by: "
-msgstr "Imprimé par : "
-
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-#, fuzzy
-msgid "Printed on: "
-msgstr "Imprimé le : "
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
+msgid "Printed by"
+msgstr ""
+
+msgid "at"
+msgstr ""
+
+msgid "of"
+msgstr ""
 
 msgid "Location: "
 msgstr "Emplacement : "
 
-# 87%
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l jS F Y"
-msgstr "l j F Y"
+msgid "j M {0}"
+msgstr ""
+
+msgid "l jS M Y {0}"
+msgstr ""
+
+msgid "All day: "
+msgstr ""
 
 # 87%
 # 75%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "l jS F"
 msgstr "l j F"
@@ -1427,10 +1438,6 @@ msgstr "M j"
 
 msgid "j"
 msgstr "j"
-
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l d/m/Y"
-msgstr "l d/m/Y"
 
 msgid "General calendar settings"
 msgstr "Paramètres de configuration générale de l'agenda"
@@ -1642,6 +1649,12 @@ msgstr "Trier par: Sensibilité"
 msgid "Loading appointments"
 msgstr "Chargement des rendez-vous"
 
+msgid "Attendees"
+msgstr ""
+
+msgid "Optional attendees"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "jS F {0}"
 msgstr "jS F {0}"
@@ -1772,6 +1785,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} dans {1}"
@@ -2132,11 +2147,9 @@ msgid "Delete Category"
 msgstr "supprimer la catégorie"
 
 msgid ""
-"Are you sure you want to delete the category \"{0}\"? Items already assigned "
-"this category won't be affected."
+"Are you sure you want to delete the category \"{0}\"? Other items keep this "
+"category, but lose the assigned color."
 msgstr ""
-"êtes-vous certain de vouloir supprimer la catégorie \"{0}\" ? Les éléments "
-"déjà assignés à cette catégorie ne sont pas affectés."
 
 msgid "Rename Category"
 msgstr "Renommer la catégorie"
@@ -2418,6 +2431,11 @@ msgstr "Aucune information Libre/Occupé n'est disponible pour cette date"
 msgid "No suggestions available"
 msgstr "Aucune suggestion disponible"
 
+# 87%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "l jS F Y"
+msgstr "l j F Y"
+
 msgid "Switch between different contexts e.g. inbox, calendar, etc."
 msgstr ""
 "Changer entre différents contextes, par ex. Boîte de réception, calendrier, "
@@ -2523,6 +2541,9 @@ msgstr "Aide"
 msgid "WebApp Manual"
 msgstr "Manuel WebApp"
 
+msgid "Item data"
+msgstr ""
+
 msgid "INSERT"
 msgstr "INSERT"
 
@@ -2531,10 +2552,6 @@ msgstr ""
 
 msgid "ZDeveloper"
 msgstr "ZDeveloper"
-
-#, fuzzy
-msgid "Kopano WebApp print"
-msgstr "WebApp Kopano"
 
 msgid "Display name"
 msgstr "Afficher le nom"
@@ -3154,6 +3171,9 @@ msgstr "d-m-Y"
 msgid "Original message"
 msgstr "Message initial"
 
+msgid "l d/m/Y"
+msgstr "l d/m/Y"
+
 msgid "Sent Items"
 msgstr "Éléments envoyés"
 
@@ -3401,9 +3421,6 @@ msgstr "Destinataires"
 msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr "de la part de"
-
-msgid "D {0}"
-msgstr ""
 
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
 msgctxt "mail.previewpanel"
@@ -3742,11 +3759,21 @@ msgstr "Assistant"
 msgid "Loading contacts"
 msgstr "Contacts principaux"
 
-msgid "Group"
-msgstr "Groupe"
+msgid ""
+"There are no items to show in this list. Update the filter for more results."
+msgstr ""
 
-msgid "Work"
-msgstr "Travail"
+msgid "[Group]"
+msgstr ""
+
+msgid "Work:"
+msgstr ""
+
+msgid "Primary:"
+msgstr ""
+
+msgid "Mobile:"
+msgstr ""
 
 msgid "Sort by: Full Name"
 msgstr "Trier par : Nom complet"
@@ -3977,6 +4004,9 @@ msgstr "Y"
 
 msgid "Important"
 msgstr "Important"
+
+msgid "Work"
+msgstr "Travail"
 
 msgid "Personal"
 msgstr "Personnel"
@@ -4252,6 +4282,9 @@ msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 "Vos modifications seront perdues si vous quittez cette page maintenant."
 
+msgid "D {0}"
+msgstr ""
+
 #, fuzzy
 msgid "D d-m"
 msgstr "d-m-Y"
@@ -4299,16 +4332,6 @@ msgid ""
 "The installed license key(s) have expired or are being over used. Please "
 "contact your system administrator for further information."
 msgstr ""
-
-# 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-msgid "{0} in {1}"
-msgstr "{0} dans {1}"
-
-# 100%
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
-msgid "{0} of {1}"
-msgstr "{0} de {1}"
 
 msgid "Full control"
 msgstr "Contrôle complet"
@@ -4727,9 +4750,6 @@ msgstr "Afficher Cci"
 msgid "Show From field"
 msgstr "Afficher De"
 
-msgid "No signatures configured"
-msgstr "Aucune signature configurée"
-
 msgid "Cannot save while attachment is being uploaded"
 msgstr ""
 
@@ -4960,6 +4980,9 @@ msgstr ""
 msgid "Signatures"
 msgstr "Signatures"
 
+msgid "No signatures configured"
+msgstr "Aucune signature configurée"
+
 msgid "New messages"
 msgstr ""
 
@@ -5162,6 +5185,9 @@ msgstr ""
 msgid "Show insertion points in WebApp"
 msgstr ""
 
+msgid "Show \"item data\" button in context menu (mail only)"
+msgstr ""
+
 msgid "Edit setting"
 msgstr "Modifier la configuration"
 
@@ -5220,10 +5246,25 @@ msgstr ""
 msgid "Hide widget panel"
 msgstr ""
 
-msgid "File previewing"
+msgid "Auto"
 msgstr ""
 
-msgid "Attachment preview (PDF, Open formats and images)"
+msgid "Actual size"
+msgstr ""
+
+msgid "Page width"
+msgstr ""
+
+msgid "Attachment preview (PDF and Open formats)"
+msgstr ""
+
+msgid "Document default zoom"
+msgstr ""
+
+msgid "PDF zoom"
+msgstr ""
+
+msgid "File previewing"
 msgstr ""
 
 msgid "Inbox navigation"
@@ -5445,6 +5486,9 @@ msgstr "Envoyer la réponse."
 msgid "Date Complete"
 msgstr "Date d'achèvement"
 
+msgid "Multiple companies name must be separated by"
+msgstr ""
+
 msgid "Update List"
 msgstr "Actualiser la liste"
 
@@ -5529,6 +5573,15 @@ msgstr "Créer Tâche"
 #, fuzzy
 msgid "Completed"
 msgstr "Achevé"
+
+#, fuzzy
+msgid "Printed by: "
+msgstr "Imprimé par : "
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#, fuzzy
+msgid "Printed on: "
+msgstr "Imprimé le : "
 
 msgid "Percent complete"
 msgstr "Pourcentage achevé"
@@ -5716,6 +5769,9 @@ msgid "Previous"
 msgstr ""
 
 msgid "Next"
+msgstr ""
+
+msgid "Click the link to open the URL in a new window."
 msgstr ""
 
 msgid "The server reported an unknown error on your request."
@@ -6042,9 +6098,6 @@ msgstr ""
 
 msgid "Unknown MAPI Error"
 msgstr "Erreur MAPI inconnue"
-
-msgid "Click the link to open the URL in a new window."
-msgstr ""
 
 msgid "This external link will open in a new window"
 msgstr "Ce lien externe s'ouvrira dans une nouvelle fenêtre"
@@ -6735,6 +6788,9 @@ msgstr "Mot de passe"
 
 msgid "Sign in"
 msgstr "Se connecter"
+
+msgid "Caps lock is on"
+msgstr ""
 
 # 94%
 #, fuzzy
