--- a/server/language/hu_HU.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/hu_HU.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -383,9 +383,8 @@ msgstr "Felhasználói adatlap"
 msgid "First"
 msgstr "Keresztnév"
 
-# Titulus?
-msgid "Initial"
-msgstr "Megszólítás"
+msgid "Initials"
+msgstr ""
 
 msgid "Display"
 msgstr "Megjelenő"
@@ -1413,6 +1412,9 @@ msgstr "Kijelölt elem másolása"
 msgid "Paste selected item"
 msgstr "Kijelölt elem beillesztése"
 
+msgid "An overview of"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "Start"
 msgstr "Indítás"
@@ -1421,24 +1423,32 @@ msgstr "Indítás"
 msgid "End"
 msgstr "Vége"
 
-# 76%
-#, fuzzy
-msgid "Printed by: "
-msgstr "Rendezés: Címzett szerint"
-
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-#, fuzzy
-msgid "Printed on: "
-msgstr "Jegyzet nyomtatása"
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
+msgid "Printed by"
+msgstr ""
+
+msgid "at"
+msgstr ""
+
+msgid "of"
+msgstr ""
 
 #, fuzzy
 msgid "Location: "
 msgstr "Helyszín"
 
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l jS F Y"
-msgstr "Y. F j. l, G:i"
+msgid "j M {0}"
+msgstr ""
 
+msgid "l jS M Y {0}"
+msgstr ""
+
+msgid "All day: "
+msgstr ""
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "l jS F"
 msgstr "F j. l"
@@ -1477,10 +1487,6 @@ msgstr ""
 #, fuzzy
 msgid "j"
 msgstr "j"
-
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l d/m/Y"
-msgstr "l Y/m/d"
 
 msgid "General calendar settings"
 msgstr "Általános naptár beállítások"
@@ -1694,6 +1700,12 @@ msgstr "Rendezés: Érzékenység szerint"
 msgid "Loading appointments"
 msgstr "Találkozók betöltése"
 
+msgid "Attendees"
+msgstr ""
+
+msgid "Optional attendees"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "jS F {0}"
 msgstr ""
@@ -1820,6 +1832,8 @@ msgstr ""
 
 # 80%
 # 100%
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{1} - {0}"
@@ -2172,11 +2186,9 @@ msgid "Delete Category"
 msgstr "Kategória törlése"
 
 msgid ""
-"Are you sure you want to delete the category \"{0}\"? Items already assigned "
-"this category won't be affected."
+"Are you sure you want to delete the category \"{0}\"? Other items keep this "
+"category, but lose the assigned color."
 msgstr ""
-"Biztosan törölni szeretné a kategóriát \"{0}\"? A kategóriába már besorolt "
-"elemeket a törlés nem érinti."
 
 msgid "Rename Category"
 msgstr "Kategória átnevezése"
@@ -2456,6 +2468,10 @@ msgstr "Nincs elérhető szabad/foglalt információ erre a dátumra"
 msgid "No suggestions available"
 msgstr "Nincs elérhető javaslat"
 
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "l jS F Y"
+msgstr "Y. F j. l, G:i"
+
 msgid "Switch between different contexts e.g. inbox, calendar, etc."
 msgstr "Kontextusok közötti váltás, pl. inbox, naptár, stb."
 
@@ -2562,6 +2578,9 @@ msgstr "Súgó"
 msgid "WebApp Manual"
 msgstr "WebApp kézikönyv"
 
+msgid "Item data"
+msgstr ""
+
 msgid "INSERT"
 msgstr "INSERT"
 
@@ -2570,10 +2589,6 @@ msgstr "Rendezés: tartalom.levél.rácsalapértelmezettoszlop"
 
 msgid "ZDeveloper"
 msgstr "ZDeveloper"
-
-#, fuzzy
-msgid "Kopano WebApp print"
-msgstr "Kopano WebApp"
 
 # 91%
 msgid "Display name"
@@ -3197,6 +3212,9 @@ msgstr "Y-m-d"
 msgid "Original message"
 msgstr "Eredeti üzenet"
 
+msgid "l d/m/Y"
+msgstr "l Y/m/d"
+
 msgid "Sent Items"
 msgstr ""
 
@@ -3427,9 +3445,6 @@ msgstr "Címzettek"
 msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr "nevében"
-
-msgid "D {0}"
-msgstr ""
 
 # 75%
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
@@ -3768,11 +3783,21 @@ msgstr "Asszisztens"
 msgid "Loading contacts"
 msgstr "Kapcsolatok betöltése"
 
-msgid "Group"
-msgstr "Csoport"
+msgid ""
+"There are no items to show in this list. Update the filter for more results."
+msgstr ""
 
-msgid "Work"
-msgstr "Munka"
+msgid "[Group]"
+msgstr ""
+
+msgid "Work:"
+msgstr ""
+
+msgid "Primary:"
+msgstr ""
+
+msgid "Mobile:"
+msgstr ""
 
 msgid "Sort by: Full Name"
 msgstr "Rendezés: Teljes név"
@@ -3976,6 +4001,9 @@ msgstr "Y"
 
 msgid "Important"
 msgstr "Fontos"
+
+msgid "Work"
+msgstr "Munka"
 
 msgid "Personal"
 msgstr "Személyes"
@@ -4256,6 +4284,9 @@ msgstr "Beépülő modul panel szétnyitása"
 msgid "Your changes will be lost if you leave this page now."
 msgstr "A változtatásai elvesznek, ha most elhagyja ezt az oldalt."
 
+msgid "D {0}"
+msgstr ""
+
 #, fuzzy
 msgid "D d-m"
 msgstr "Y-m-d D"
@@ -4303,17 +4334,6 @@ msgid ""
 "The installed license key(s) have expired or are being over used. Please "
 "contact your system administrator for further information."
 msgstr ""
-
-# 80%
-# 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-msgid "{0} in {1}"
-msgstr "{1} - {0}"
-
-# 100%
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
-msgid "{0} of {1}"
-msgstr "{1} - {0}"
 
 msgid "Full control"
 msgstr "Teljes hozzáférés"
@@ -4733,9 +4753,6 @@ msgstr "Titkos címzettek megjelenítése"
 msgid "Show From field"
 msgstr "Feladó megjelenítése"
 
-msgid "No signatures configured"
-msgstr "Nincs aláírás beállítva"
-
 msgid "Cannot save while attachment is being uploaded"
 msgstr ""
 
@@ -4963,6 +4980,9 @@ msgstr ""
 msgid "Signatures"
 msgstr "Aláírások"
 
+msgid "No signatures configured"
+msgstr "Nincs aláírás beállítva"
+
 msgid "New messages"
 msgstr ""
 
@@ -5164,6 +5184,9 @@ msgstr ""
 msgid "Show insertion points in WebApp"
 msgstr ""
 
+msgid "Show \"item data\" button in context menu (mail only)"
+msgstr ""
+
 msgid "Edit setting"
 msgstr "Beállítás szerkesztése"
 
@@ -5222,10 +5245,25 @@ msgstr ""
 msgid "Hide widget panel"
 msgstr ""
 
-msgid "File previewing"
+msgid "Auto"
 msgstr ""
 
-msgid "Attachment preview (PDF, Open formats and images)"
+msgid "Actual size"
+msgstr ""
+
+msgid "Page width"
+msgstr ""
+
+msgid "Attachment preview (PDF and Open formats)"
+msgstr ""
+
+msgid "Document default zoom"
+msgstr ""
+
+msgid "PDF zoom"
+msgstr ""
+
+msgid "File previewing"
 msgstr ""
 
 msgid "Inbox navigation"
@@ -5437,6 +5475,9 @@ msgstr "Válasz elküldése azonnal"
 msgid "Date Complete"
 msgstr "Befejezés dátuma"
 
+msgid "Multiple companies name must be separated by"
+msgstr ""
+
 msgid "Update List"
 msgstr "Lista frissítése"
 
@@ -5519,6 +5560,16 @@ msgstr "Új feladat"
 #, fuzzy
 msgid "Completed"
 msgstr "Kész"
+
+# 76%
+#, fuzzy
+msgid "Printed by: "
+msgstr "Rendezés: Címzett szerint"
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#, fuzzy
+msgid "Printed on: "
+msgstr "Jegyzet nyomtatása"
 
 msgid "Percent complete"
 msgstr "Százalékban kész"
@@ -5694,6 +5745,9 @@ msgstr "Előző"
 
 msgid "Next"
 msgstr "Következő"
+
+msgid "Click the link to open the URL in a new window."
+msgstr "Kattintson a linkre az új ablakban való megnyitáshoz."
 
 msgid "The server reported an unknown error on your request."
 msgstr "A kiszolgáló ismeretlen hibával válaszolt a kérésre."
@@ -6007,9 +6061,6 @@ msgstr ""
 
 msgid "Unknown MAPI Error"
 msgstr "Ismeretlen MAPI hiba: %s"
-
-msgid "Click the link to open the URL in a new window."
-msgstr "Kattintson a linkre az új ablakban való megnyitáshoz."
 
 msgid "This external link will open in a new window"
 msgstr "Ez a külső link egy új ablakban fog megnyílni"
@@ -6697,6 +6748,9 @@ msgstr "Jelszó"
 
 msgid "Sign in"
 msgstr "Bejelentkezés"
+
+msgid "Caps lock is on"
+msgstr ""
 
 #, fuzzy
 msgid "File is not imported successfully"
