--- a/server/language/nl_NL.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/nl_NL.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -383,8 +383,8 @@ msgstr "Gebruikersdetails"
 msgid "First"
 msgstr "Voornaam"
 
-msgid "Initial"
-msgstr "Initialen"
+msgid "Initials"
+msgstr ""
 
 msgid "Display"
 msgstr "Tonen als"
@@ -1409,6 +1409,9 @@ msgstr "Kopieer geselecteerd item"
 msgid "Paste selected item"
 msgstr "Plak geselecteerd item"
 
+msgid "An overview of"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "Start"
 msgstr "Begin"
@@ -1417,24 +1420,33 @@ msgstr "Begin"
 msgid "End"
 msgstr "Einde"
 
-# 76%
-msgid "Printed by: "
-msgstr "Geprint door: "
-
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "Printed on: "
-msgstr "Geprint op: "
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
+msgid "Printed by"
+msgstr ""
+
+msgid "at"
+msgstr ""
+
+msgid "of"
+msgstr ""
 
 msgid "Location: "
 msgstr "Locatie: "
 
-# 87%
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l jS F Y"
-msgstr "l j F Y"
+msgid "j M {0}"
+msgstr ""
+
+msgid "l jS M Y {0}"
+msgstr ""
+
+msgid "All day: "
+msgstr ""
 
 # 87%
 # 75%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "l jS F"
 msgstr "l j F"
@@ -1471,10 +1483,6 @@ msgstr "M j"
 
 msgid "j"
 msgstr "j"
-
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l d/m/Y"
-msgstr "l d-m-Y"
 
 msgid "General calendar settings"
 msgstr "Kalenderinstellingen"
@@ -1691,6 +1699,12 @@ msgstr "Sorteer op: Prive"
 msgid "Loading appointments"
 msgstr "Afspraken laden"
 
+msgid "Attendees"
+msgstr ""
+
+msgid "Optional attendees"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "jS F {0}"
 msgstr ""
@@ -1814,6 +1828,8 @@ msgid "Today (all day)"
 msgstr "Vandaag (gehele dag)"
 
 # 100%
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
 msgid "{0} - {1}"
 msgstr "{0} - {1}"
 
@@ -2167,11 +2183,9 @@ msgid "Delete Category"
 msgstr "Verwijder Categorie"
 
 msgid ""
-"Are you sure you want to delete the category \"{0}\"? Items already assigned "
-"this category won't be affected."
+"Are you sure you want to delete the category \"{0}\"? Other items keep this "
+"category, but lose the assigned color."
 msgstr ""
-"Weet u zeker dat u de categorie \"{0}\" wilt verwijderen? Items die deze "
-"categorie al hebben worden niet beïnvloed."
 
 msgid "Rename Category"
 msgstr "Hernoem Categorie"
@@ -2457,6 +2471,11 @@ msgstr "Geen beschikbaarheidsinformatie aanwezig voor deze datum"
 msgid "No suggestions available"
 msgstr "Geen suggesties beschikbaar"
 
+# 87%
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "l jS F Y"
+msgstr "l j F Y"
+
 msgid "Switch between different contexts e.g. inbox, calendar, etc."
 msgstr ""
 "Wisselen tussen verschillende contexten zoals Postvak in, Kalender, ..."
@@ -2561,6 +2580,9 @@ msgstr "Hulp"
 msgid "WebApp Manual"
 msgstr "WebApp handleiding"
 
+msgid "Item data"
+msgstr ""
+
 msgid "INSERT"
 msgstr "INSERT"
 
@@ -2569,9 +2591,6 @@ msgstr "Sorteren op: context.mail.griddefaultcolumn"
 
 msgid "ZDeveloper"
 msgstr "ZDeveloper"
-
-msgid "Kopano WebApp print"
-msgstr "Kopano WebApp printen"
 
 # 91%
 msgid "Display name"
@@ -3170,6 +3189,9 @@ msgstr "d-m-Y"
 msgid "Original message"
 msgstr "Oorspronkelijk bericht"
 
+msgid "l d/m/Y"
+msgstr "l d-m-Y"
+
 msgid "Sent Items"
 msgstr "Verzonden items"
 
@@ -3406,9 +3428,6 @@ msgstr "Geadresseerden"
 msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr "namens"
-
-msgid "D {0}"
-msgstr ""
 
 # 75%
 # 100%
@@ -3749,11 +3768,21 @@ msgstr "Assistent"
 msgid "Loading contacts"
 msgstr "Contactpersonen laden"
 
-msgid "Group"
-msgstr "Groep"
+msgid ""
+"There are no items to show in this list. Update the filter for more results."
+msgstr ""
 
-msgid "Work"
-msgstr "Werk"
+msgid "[Group]"
+msgstr ""
+
+msgid "Work:"
+msgstr ""
+
+msgid "Primary:"
+msgstr ""
+
+msgid "Mobile:"
+msgstr ""
 
 msgid "Sort by: Full Name"
 msgstr "Sorteer op: Volledige Naam"
@@ -4012,6 +4041,9 @@ msgstr "Y"
 msgid "Important"
 msgstr "Belangrijk"
 
+msgid "Work"
+msgstr "Werk"
+
 msgid "Personal"
 msgstr "Persoonlijk"
 
@@ -4266,6 +4298,9 @@ msgstr "Widget paneel uitklappen"
 msgid "Your changes will be lost if you leave this page now."
 msgstr "De wijzigingen worden niet opgeslagen wanneer u deze pagina verlaat."
 
+msgid "D {0}"
+msgstr ""
+
 msgid "D d-m"
 msgstr "D d-m"
 
@@ -4311,17 +4346,6 @@ msgid ""
 msgstr ""
 "De geïnstalleerde licentie sleutel(s) zijn verlopen of worden meerderen "
 "keren gebruikt. Neem contact op met de systeembeheerder voor meer informatie."
-
-# 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-msgid "{0} in {1}"
-msgstr "{0} in {1}"
-
-# 80%
-# 100%
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
-msgid "{0} of {1}"
-msgstr "{0} van {1}"
 
 msgid "Full control"
 msgstr "Volledig beheer"
@@ -4724,9 +4748,6 @@ msgstr "Toon Bcc"
 msgid "Show From field"
 msgstr "Toon afzender"
 
-msgid "No signatures configured"
-msgstr "Geen handtekeningen geconfigureerd"
-
 msgid "Cannot save while attachment is being uploaded"
 msgstr "Kan niet opslaan als bijlage aan het uploaden is"
 
@@ -4951,6 +4972,9 @@ msgstr "Verwijder alles"
 msgid "Signatures"
 msgstr "Handtekeningen"
 
+msgid "No signatures configured"
+msgstr "Geen handtekeningen geconfigureerd"
+
 msgid "New messages"
 msgstr "Nieuwe berichten"
 
@@ -5157,6 +5181,9 @@ msgstr "Ontwikkelaar tools"
 msgid "Show insertion points in WebApp"
 msgstr "Laat 'insertion points' zien in WebApp"
 
+msgid "Show \"item data\" button in context menu (mail only)"
+msgstr ""
+
 msgid "Edit setting"
 msgstr "Aanpassen instelling"
 
@@ -5213,11 +5240,26 @@ msgstr "Laat ongelezen email teller zien in applicatie titel"
 msgid "Hide widget panel"
 msgstr ""
 
+msgid "Auto"
+msgstr ""
+
+msgid "Actual size"
+msgstr ""
+
+msgid "Page width"
+msgstr ""
+
+msgid "Attachment preview (PDF and Open formats)"
+msgstr ""
+
+msgid "Document default zoom"
+msgstr ""
+
+msgid "PDF zoom"
+msgstr ""
+
 msgid "File previewing"
 msgstr "Voorbeeldweergave van bestanden"
-
-msgid "Attachment preview (PDF, Open formats and images)"
-msgstr "Voorbeeldweergave van bijlagen (PDF, Open formaten en foto's)"
 
 msgid "Inbox navigation"
 msgstr "Inbox navigatie"
@@ -5434,6 +5476,9 @@ msgstr "Antwoord nu verzenden"
 msgid "Date Complete"
 msgstr "Datum Voltooid"
 
+msgid "Multiple companies name must be separated by"
+msgstr ""
+
 msgid "Update List"
 msgstr "Lijst Bijwerken"
 
@@ -5517,6 +5562,14 @@ msgstr "Nieuwe taak"
 
 msgid "Completed"
 msgstr "Afgerond"
+
+# 76%
+msgid "Printed by: "
+msgstr "Geprint door: "
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "Printed on: "
+msgstr "Geprint op: "
 
 msgid "Percent complete"
 msgstr "Percentage afgerond"
@@ -5702,6 +5755,9 @@ msgstr "Vorige"
 
 msgid "Next"
 msgstr "Volgende"
+
+msgid "Click the link to open the URL in a new window."
+msgstr "Klik op de link om de URL in een nieuw venster te openen."
 
 msgid "The server reported an unknown error on your request."
 msgstr "De server rapporteerde een onbekende fout in het verzoek."
@@ -6027,9 +6083,6 @@ msgstr ""
 
 msgid "Unknown MAPI Error"
 msgstr "Onbekende MAPI-Fout"
-
-msgid "Click the link to open the URL in a new window."
-msgstr "Klik op de link om de URL in een nieuw venster te openen."
 
 msgid "This external link will open in a new window"
 msgstr "Deze externe koppeling wordt in een nieuw venster geopend"
@@ -6721,6 +6774,9 @@ msgstr "Wachtwoord"
 
 msgid "Sign in"
 msgstr "Inloggen"
+
+msgid "Caps lock is on"
+msgstr ""
 
 msgid "File is not imported successfully"
 msgstr "Bijlage kon niet succesvol worden geïmporteerd"
