--- a/server/language/zh_TW.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/zh_TW.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -364,8 +364,8 @@ msgstr "使用者詳細"
 msgid "First"
 msgstr "第一"
 
-msgid "Initial"
-msgstr "最初"
+msgid "Initials"
+msgstr ""
 
 msgid "Display"
 msgstr "顯示"
@@ -1355,6 +1355,9 @@ msgstr ""
 msgid "Paste selected item"
 msgstr ""
 
+msgid "An overview of"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "Start"
 msgstr "開始"
@@ -1363,23 +1366,32 @@ msgstr "開始"
 msgid "End"
 msgstr "結束"
 
-#, fuzzy
-msgid "Printed by: "
-msgstr "依收件者排序"
-
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-#, fuzzy
-msgid "Printed on: "
-msgstr "列印此筆記"
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
+msgid "Printed by"
+msgstr ""
+
+msgid "at"
+msgstr ""
+
+msgid "of"
+msgstr ""
 
 #, fuzzy
 msgid "Location: "
 msgstr "位置"
 
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l jS F Y"
-msgstr "l jS F Y"
+msgid "j M {0}"
+msgstr ""
 
+msgid "l jS M Y {0}"
+msgstr ""
+
+msgid "All day: "
+msgstr ""
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for formatting instructions
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "l jS F"
 msgstr "l jS F"
@@ -1411,10 +1423,6 @@ msgstr ""
 #, fuzzy
 msgid "j"
 msgstr "jS"
-
-#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
-msgid "l d/m/Y"
-msgstr "l d/m/Y"
 
 msgid "General calendar settings"
 msgstr "一般行事曆設定"
@@ -1621,6 +1629,12 @@ msgstr "依敏感性排序"
 msgid "Loading appointments"
 msgstr "載入會議中"
 
+msgid "Attendees"
+msgstr ""
+
+msgid "Optional attendees"
+msgstr ""
+
 #. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
 msgid "jS F {0}"
 msgstr ""
@@ -1740,6 +1754,8 @@ msgid "Today (all day)"
 msgstr ""
 
 # 100%
+#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
+#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
 #, fuzzy
 msgid "{0} - {1}"
 msgstr "{0} 在 {1}"
@@ -2076,8 +2092,8 @@ msgid "Delete Category"
 msgstr ""
 
 msgid ""
-"Are you sure you want to delete the category \"{0}\"? Items already assigned "
-"this category won't be affected."
+"Are you sure you want to delete the category \"{0}\"? Other items keep this "
+"category, but lose the assigned color."
 msgstr ""
 
 msgid "Rename Category"
@@ -2353,6 +2369,10 @@ msgstr "這個日期沒有空閒的資訊"
 msgid "No suggestions available"
 msgstr "沒有建議"
 
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+msgid "l jS F Y"
+msgstr "l jS F Y"
+
 msgid "Switch between different contexts e.g. inbox, calendar, etc."
 msgstr ""
 
@@ -2459,6 +2479,9 @@ msgstr "說明"
 msgid "WebApp Manual"
 msgstr "WebApp操作手冊"
 
+msgid "Item data"
+msgstr ""
+
 msgid "INSERT"
 msgstr "INSERT"
 
@@ -2467,10 +2490,6 @@ msgstr ""
 
 msgid "ZDeveloper"
 msgstr "ZDeveloper"
-
-#, fuzzy
-msgid "Kopano WebApp print"
-msgstr "Kopano WebApp"
 
 msgid "Display name"
 msgstr "顯示名稱"
@@ -3084,6 +3103,9 @@ msgstr "d-m-Y"
 msgid "Original message"
 msgstr "原始郵件"
 
+msgid "l d/m/Y"
+msgstr "l d/m/Y"
+
 msgid "Sent Items"
 msgstr ""
 
@@ -3317,9 +3339,6 @@ msgstr "收件人"
 msgctxt "mail.previewpanel"
 msgid "on behalf of"
 msgstr "代表人"
-
-msgid "D {0}"
-msgstr ""
 
 # 100%
 #. TRANSLATORS: This message is used to indicate that no sent date is available for the message (because it has not been sent yet).
@@ -3655,11 +3674,21 @@ msgstr "助理"
 msgid "Loading contacts"
 msgstr "載入聯絡人中"
 
-msgid "Group"
-msgstr "群組"
+msgid ""
+"There are no items to show in this list. Update the filter for more results."
+msgstr ""
 
-msgid "Work"
-msgstr "工作"
+msgid "[Group]"
+msgstr ""
+
+msgid "Work:"
+msgstr ""
+
+msgid "Primary:"
+msgstr ""
+
+msgid "Mobile:"
+msgstr ""
 
 msgid "Sort by: Full Name"
 msgstr "依全名排序"
@@ -3847,6 +3876,9 @@ msgstr "Y"
 
 msgid "Important"
 msgstr "重要的"
+
+msgid "Work"
+msgstr "工作"
 
 msgid "Personal"
 msgstr "個人的"
@@ -4108,6 +4140,9 @@ msgstr ""
 msgid "Your changes will be lost if you leave this page now."
 msgstr ""
 
+msgid "D {0}"
+msgstr ""
+
 #, fuzzy
 msgid "D d-m"
 msgstr "d-m-Y"
@@ -4149,16 +4184,6 @@ msgid ""
 "The installed license key(s) have expired or are being over used. Please "
 "contact your system administrator for further information."
 msgstr ""
-
-# 100%
-#. TRANSLATORS: Display name of a folder: "FOLDERNAME in STORENAME".
-msgid "{0} in {1}"
-msgstr "{0} 在 {1}"
-
-# 100%
-#. TRANSLATORS: Displayed on top of a tree with folders: "FOLDERNAME of USERNAME".
-msgid "{0} of {1}"
-msgstr "{0} 的 {1}"
 
 msgid "Full control"
 msgstr "完全控制"
@@ -4570,9 +4595,6 @@ msgstr "顯示密件副本"
 msgid "Show From field"
 msgstr "顯示寄件者"
 
-msgid "No signatures configured"
-msgstr "沒有設定簽名檔"
-
 msgid "Cannot save while attachment is being uploaded"
 msgstr ""
 
@@ -4801,6 +4823,9 @@ msgstr ""
 msgid "Signatures"
 msgstr "簽名檔"
 
+msgid "No signatures configured"
+msgstr "沒有設定簽名檔"
+
 msgid "New messages"
 msgstr ""
 
@@ -5003,6 +5028,9 @@ msgstr ""
 msgid "Show insertion points in WebApp"
 msgstr ""
 
+msgid "Show \"item data\" button in context menu (mail only)"
+msgstr ""
+
 msgid "Edit setting"
 msgstr "編輯設定"
 
@@ -5061,10 +5089,25 @@ msgstr ""
 msgid "Hide widget panel"
 msgstr ""
 
-msgid "File previewing"
+msgid "Auto"
 msgstr ""
 
-msgid "Attachment preview (PDF, Open formats and images)"
+msgid "Actual size"
+msgstr ""
+
+msgid "Page width"
+msgstr ""
+
+msgid "Attachment preview (PDF and Open formats)"
+msgstr ""
+
+msgid "Document default zoom"
+msgstr ""
+
+msgid "PDF zoom"
+msgstr ""
+
+msgid "File previewing"
 msgstr ""
 
 msgid "Inbox navigation"
@@ -5272,6 +5315,9 @@ msgstr "現在傳送回應"
 msgid "Date Complete"
 msgstr "完成日期"
 
+msgid "Multiple companies name must be separated by"
+msgstr ""
+
 msgid "Update List"
 msgstr "更新列表"
 
@@ -5358,6 +5404,15 @@ msgstr ""
 #, fuzzy
 msgid "Completed"
 msgstr "完成"
+
+#, fuzzy
+msgid "Printed by: "
+msgstr "依收件者排序"
+
+#. TRANSLATORS: See http://docs.sencha.com/extjs/3.4.0/#!/api/Date for the meaning of these formatting instructions
+#, fuzzy
+msgid "Printed on: "
+msgstr "列印此筆記"
 
 msgid "Percent complete"
 msgstr "完成百分比"
@@ -5534,6 +5589,9 @@ msgid "Previous"
 msgstr ""
 
 msgid "Next"
+msgstr ""
+
+msgid "Click the link to open the URL in a new window."
 msgstr ""
 
 msgid "The server reported an unknown error on your request."
@@ -5847,9 +5905,6 @@ msgstr ""
 #, fuzzy
 msgid "Unknown MAPI Error"
 msgstr "不明的MAPI Error: %s"
-
-msgid "Click the link to open the URL in a new window."
-msgstr ""
 
 msgid "This external link will open in a new window"
 msgstr "This external link will open in a new window"
@@ -6464,6 +6519,9 @@ msgid "Password"
 msgstr ""
 
 msgid "Sign in"
+msgstr ""
+
+msgid "Caps lock is on"
 msgstr ""
 
 #, fuzzy
